# metadata-filter

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: filters.rs  lib.rs  rules.rs
