[package]
name = "metadata-filter"
version = "0.1.1"
authors = ["Koen Bolhuis <koen.bolhuis@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/InputUsername/metadata-filter.git"
homepage = "https://github.com/InputUsername/metadata-filter"
readme = "README.md"
description = "Clean up artist, album and song names"
keywords = ["music", "metadata", "filter", "filtering"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"